---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: code should not abort
   ┌─ tests/inputs/loop_invariant/asserts_in_loop_weak_inv.fail.move:16:15
   │
16 │         x = x - 1;
   │               ^
   │
   =     at tests/inputs/loop_invariant/asserts_in_loop_weak_inv.fail.move:22: decrement_loop_weak_spec

error: prover::ensures does not hold
   ┌─ tests/inputs/loop_invariant/asserts_in_loop_weak_inv.fail.move:23:5
   │
23 │     asserts(x >= n);
   │     ^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/loop_invariant/asserts_in_loop_weak_inv.fail.move:22: decrement_loop_weak_spec
